Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
         </ul>
       </header>
       <section>
-        <p>Atelier organisé à <a href="http://www.norsys.fr/">Norsys</a> ayant pour but de créer un blog en utilisant Node.js, Express 3 et MongoDB. Le projet contient <a href="https://github.com/ChristopheHoch/node-simple-blog.git">une ébauche de correction</a>.</p>
+        <h1>
+<a name="node-simple-blog" class="anchor" href="#node-simple-blog"><span class="octicon octicon-link"></span></a>node-simple-blog</h1>
+
+<p>Atelier organisé à <a href="http://www.norsys.fr/">Norsys</a> ayant pour but de créer un blog en utilisant Node.js, Express 3 et MongoDB.</p>
 
 <h2>
 <a name="1-hello-express" class="anchor" href="#1-hello-express"><span class="octicon octicon-link"></span></a>1. Hello Express!</h2>
